--- a/index.html
+++ b/index.html
@@ -31,16 +31,21 @@
             plotChart(garageData, caveData);
         }
 
-        async function fetchAPI(url) {
-            try {
-                const response = await fetch(url);
-                const data = await response.json();
-                return data;
-            } catch (error) {
-                console.error("Erreur lors de la récupération des données", error);
-                return [];
-            }
-        }
+       async function fetchAPI(url) {
+    try {
+        console.log("Fetching data from:", url); 
+        const response = await fetch(url);
+        const data = await response.json();
+        console.log("Data received:", data); 
+
+        // Récupérer uniquement le tableau "feeds"
+        return data.feeds || [];  // Si "feeds" n'existe pas, retourne un tableau vide
+    } catch (error) {
+        console.error("Erreur lors de la récupération des données", error);
+        return [];
+    }
+}
+
 
         function plotChart(garageData, caveData) {
             const ctx = document.getElementById('temperatureChart').getContext('2d');
