--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 }
 
 
-        function plotChart(garageData, caveData) {
+        function plotChart(garageData.feeds, caveData.feeds);
+ {
         console.log("garageData received in plotChart:", garageData); // Ajout du log
     console.log("caveData received in plotChart:", caveData); // Ajout du log
 
