--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             const formattedStartDate = formatDate(startDate);
             const formattedEndDate = formatDate(endDate);
             
-            const apiKey = "2851323"; // Remplace par ta vraie clé
+            const apiKey = "0UCS0BOBZ6SXGARL"; // Remplace par ta vraie clé
             
             const garageUrl = `https://api.thingspeak.com/channels/2851323/fields/1.json?api_key=${apiKey}&start=${formattedStartDate}&end=${formattedEndDate}`;
             const caveUrl = `https://api.thingspeak.com/channels/2865124/fields/1.json?api_key=${apiKey}&start=${formattedStartDate}&end=${formattedEndDate}`;
