--- a/index.html
+++ b/index.html
@@ -34,13 +34,10 @@
                     return;
                 }
 
-                const apiKeyGarage = "SPJ6Y2W1B009JQTG"; 
-                const apiKeyCave = "0UCS0BOBZ6SXGARL";
+                const apiKey = "0UCS0BOBZ6SXGARL"; // Remplace par ta vraie clé
 
-
-             const garageUrl = `https://api.thingspeak.com/channels/2851323/fields/1.json?api_key=${apiKeyGarage}&start=${formattedStartDate}&end=${formattedEndDate}`;
-             const caveUrl = `https://api.thingspeak.com/channels/2865124/fields/1.json?api_key=${apiKeyCave}&start=${formattedStartDate}&end=${formattedEndDate}`;
-
+                const garageUrl = `https://api.thingspeak.com/channels/2851323/fields/1.json?api_key=${apiKey}&start=${formatDate(startDate)}&end=${formatDate(endDate)}`;
+                const caveUrl = `https://api.thingspeak.com/channels/2865124/fields/1.json?api_key=${apiKey}&start=${formatDate(startDate)}&end=${formatDate(endDate)}`;
 
                 console.log("Garage URL:", garageUrl);
                 console.log("Cave URL:", caveUrl);
