--- a/index.html
+++ b/index.html
@@ -205,28 +205,4 @@
                         },
                         y: {
                             min: yScaleMin,
-                            max: yScaleMax,
-                            title: {
-                                display: true,
-                                text: 'Température (°C)'
-                            }
-                        }
-                    },
-                    plugins: {
-                        zoom: {
-                            pan: {
-                                enabled: true,
-                                mode: 'x'
-                            },
-                            zoom: {
-                                wheel: {
-                                    enabled: true
-                                },
-                                pinch: {
-                                    enabled: true
-                                },
-                                mode: 'x'
-                            }
-                        }
-                    }
-                }
+                            max
