--- a/index.html
+++ b/index.html
@@ -7,29 +7,6 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom"></script>
-    <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            width: 100%;
-        }
-        #chartContainer {
-            width: 100%;
-            height: 80%;
-            position: relative;
-        }
-        #tempChart {
-            width: 100%;
-            height: 100%;
-        }
-        #scaleControls {
-            position: absolute;
-            top: 0;
-            left: 50%;
-            transform: translateX(-50%);
-        }
-    </style>
 </head>
 <body>
     <h2>Évolution de la Température</h2>
@@ -38,22 +15,10 @@
     <label for="end-date">Date de fin :</label>
     <input type="date" id="end-date">
     <button onclick="fetchData()">Afficher</button>
-
-    <div id="chartContainer">
-        <div id="scaleControls">
-            <button onclick="changeXScale('hour')">Échelle X (Heure)</button>
-            <button onclick="changeXScale('day')">Échelle X (Jour)</button>
-            <button onclick="changeYScale(10)">Échelle Y (+10)</button>
-            <button onclick="changeYScale(-10)">Échelle Y (-10)</button>
-            <button onclick="autoScaleY()">Auto-échelle Y</button>
-        </div>
-        <canvas id="tempChart"></canvas>
-    </div>
+    <canvas id="tempChart"></canvas>
 
     <script>
-        let tempChart = null;
-        let yScaleMin = null;
-        let yScaleMax = null;
+        let tempChart = null; // Initialise tempChart à null
 
         function formatDate(dateStr) {
             const date = new Date(dateStr);
@@ -70,16 +35,16 @@
                     return;
                 }
 
-                const apiKeyGarage = "SPJ6Y2W1B009JQTG";
-                const apiKeyCave = "0UCS0BOBZ6SXGARL";
+                const apiKeyGarage = "SPJ6Y2W1B009JQTG"; // Remplace par ta vraie clé
+                const apiKeyCave = "0UCS0BOBZ6SXGARL"; // Remplace par ta vraie clé
 
                 const formattedStartDate = formatDate(startDate);
                 const formattedEndDate = formatDate(endDate);
                 console.log("Formatted Start Date:", formattedStartDate);
                 console.log("Formatted End Date:", formattedEndDate);
 
-                const garageUrl = `https://api.thingspeak.com/channels/2851323/fields/1.json?api_key=<span class="math-inline">\{apiKeyGarage\}&start\=</span>{formattedStartDate}&end=${formattedEndDate}`;
-                const caveUrl = `https://api.thingspeak.com/channels/2865124/fields/1.json?api_key=<span class="math-inline">\{apiKeyCave\}&start\=</span>{formattedStartDate}&end=${formattedEndDate}`;
+                const garageUrl = `https://api.thingspeak.com/channels/2851323/fields/1.json?api_key=${apiKeyGarage}&start=${formattedStartDate}&end=${formattedEndDate}`;
+                const caveUrl = `https://api.thingspeak.com/channels/2865124/fields/1.json?api_key=${apiKeyCave}&start=${formattedStartDate}&end=${formattedEndDate}`;
 
                 console.log("Garage URL:", garageUrl);
                 console.log("Cave URL:", caveUrl);
@@ -90,11 +55,11 @@
                 ]);
 
                 if (!garageResponse.ok) {
-                    const errorData = await garageResponse.text();
+                    const errorData = await garageResponse.text(); // Récupère le corps de la réponse d'erreur
                     throw new Error(`Garage API Error: ${garageResponse.statusText}, Response: ${errorData}`);
                 }
                 if (!caveResponse.ok) {
-                    const errorData = await caveResponse.text();
+                    const errorData = await caveResponse.text(); // Récupère le corps de la réponse d'erreur
                     throw new Error(`Cave API Error: ${caveResponse.statusText}, Response: ${errorData}`);
                 }
 
@@ -138,13 +103,11 @@
                 tempChart.destroy();
             }
 
+            // Calcul des plages de températures
             const allData = garageData.concat(caveData);
             const temperatures = allData.map(data => data.y);
             const minTemp = Math.min(...temperatures);
             const maxTemp = Math.max(...temperatures);
-
-            if (yScaleMin === null) yScaleMin = minTemp - 2;
-            if (yScaleMax === null) yScaleMax = maxTemp + 2;
 
             tempChart = new Chart(ctx, {
                 type: 'line',
@@ -204,8 +167,8 @@
                             }
                         },
                         y: {
-                            min: yScaleMin,
-                            max: yScaleMax,
+                            min: minTemp - 2, // Ajoute un peu de marge
+                            max: maxTemp + 2,
                             title: {
                                 display: true,
                                 text: 'Température (°C)'
@@ -232,3 +195,6 @@
                 }
             });
         }
+    </script>
+</body>
+</html>
