--- a/index.html
+++ b/index.html
@@ -225,6 +225,4 @@
                         zoom: {
                             pan: {
                                 enabled: true,
-                                mode: 'x'
-                            },
-                            zoom:
+                                mode: '
