--- a/index.html
+++ b/index.html
@@ -215,14 +215,4 @@
                         y: {
                             min: yScaleMin,
                             max: yScaleMax,
-                            title: {
-                                display: true,
-                                text: 'Température (°C)'
-                            }
-                        }
-                    },
-                    plugins: {
-                        zoom: {
-                            pan: {
-                                enabled: true,
-                                mode: '
+                            title
